--- a/index.html
+++ b/index.html
@@ -4,35 +4,36 @@
 
 <head>
   <title></title>
+  <link href="./resources/css/style.css" rel="stylesheet" type="text/css" >
 </head>
 
 <body>
 
   <div id="first">
-  	<h1>Broadway</h1>
+  	<h1>Broadway Design</h1>
     <nav>
-    	<a href=""></a>
-    	<a href=""></a>
-    	<a href=""></a>
-    	<a href=""></a>
-    	<a href=""></a>
+    	<a href="">Home</a><br  /><br  />
+    	<a href="">Process</a><br  /><br  />
+    	<a href="">Work</a><br  /><br  />
+    	<a href="">Team</a><br  /><br  />
+    	<a href="">Contact</a>
     </nav>
   </div>
 
   <div id="second">
-    <h2></h2>
-    <img src="">
-    <h3></h3>
-    <p></p>
-    <img src="">
-    <h3></h3>
-    <p></p>
-    <img src="">
-    <h3></h3>
-    <p></p>
+    <h2>Our Process</h2>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+    <h3>Identify</h3>
+    <p>We focus on the most important details.</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.</p>
   </div>
 
-  <h2></h2>
+  <h2 id="where">Designed in New York</h2>
 
   <div id="third">
     <h2>Portfolio</h2>
@@ -44,8 +45,8 @@
     </p>
   </div>
 
-  <nav>
-    <h4></h4>
+  <nav id="two" style="text-align:left;">
+    <h6>© Broadway 2017</h6>
     <a href="">Home</a>
     <a href="">About</a>
     <a href="">Work</a>
