--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
   <div id="second">
     <h2>Our Process</h2>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+    <img src="file:///C:/cygwin/home/jan/projects/broadway/resources/images/identify.svg">
     <h3>Identify</h3>
     <p>We focus on the most important details.</p>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+    <img src="file:///C:/cygwin/home/jan/projects/broadway/resources/images/understand.svg">
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+    <img src="file:///C:/cygwin/home/jan/projects/broadway/resources/images/execute.svg">
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
   </div>
@@ -41,7 +41,7 @@
     <h2>Team</h2>
     <p>We're hiring</p>
     <h2>Contact</h2>
-    <p>Phone: (555)-555-5555<br />E-mail: test@example.com<br />Twitter: @test
+    <p>Phone: (555)-555-5555<br /><br />E-mail: test@example.com<br /><br />Twitter: @test
     </p>
   </div>
 
